[package]
name = "media-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
webrtc = "0.7.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-stream = "0.1"
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.3", features = ["v4"] }
bytes = "1.4"
thiserror = "1.0"
actix-ws = "0.2"